# Spike-Recorder-Android

./: .gitignore  .swp  AndroidManifest.xml  README.md  build.gradle  fabric.properties  gradle.properties  local.properties  proguard.cfg
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  byb-lib.cpp  byb_lib.cpp  drawing.cpp  drawing.h  log4a-lib.cpp  poc-lib.cpp  processing.cpp  processing.h
app/src/main/cpp/byb/: AmModulationProcessor.cpp  AnalysisUtils.cpp  AutocorrelationAnalysis.cpp  AverageSpikeAnalysis.cpp  CrossCorrelationAnalysis.cpp  DrawingUtils.cpp  EventTriggeredAverageAnalysis.cpp  EventUtils.cpp  FftProcessor.cpp  FilterBase.cpp  HeartbeatHelper.cpp  HighPassFilter.cpp  IsiAnalysis.cpp  JniHelper.cpp  LowPassFilter.cpp  NotchFilter.cpp  Processor.cpp  SampleStreamProcessor.cpp  SampleStreamUtils.cpp  SignalUtils.cpp  SpikeAnalysis.cpp  ThresholdProcessor.cpp  byb-lib.cpp  drawing.cpp  processing.cpp
app/src/main/cpp/byb/includes/: AmModulationProcessor.h  AnalysisUtils.h  AudioFFT.h  AutocorrelationAnalysis.h  AverageSpikeAnalysis.h  CrossCorrelationAnalysis.h  DrawingUtils.h  EventTriggeredAverageAnalysis.h  EventUtils.h  FftProcessor.h  FilterBase.h  HeartbeatHelper.h  HighPassFilter.h  IsiAnalysis.h  JniHelper.h  LowPassFilter.h  NotchFilter.h  Processor.h  SampleStreamProcessor.h  SampleStreamUtils.h  SignalUtils.h  SpikeAnalysis.h  ThresholdProcessor.h  dr_wav.h  drawing.h  processing.h
app/src/main/cpp/log4a/: LogBuffer.cpp  log4a-lib.cpp
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  (+6 more)
(+752 files in other folders)
